--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,28 @@
-name: Publish Docker Image
-on: [release]
+name: Execute Ansible scripts
+on:
+  push:
+    branches:
+      - main
 jobs:
-  push_to_registry:
+  deploy:
     runs-on: ubuntu-20.04
     steps:
-      - name: Check out the repo
+      - name: Check out repository code
         uses: actions/checkout@v2
+
+      - run: pip install -r requirements.txt
+      - run: python -m unittest
 
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: rsorokaurjc/romansoroka
-
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
@@ -26,3 +30,10 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Deploy
+        run: .github/scripts/deploy.sh
+        env:
+          VAULT_PASS: ${{ secrets.VAULT_PASS }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
